@@ -1,4 +1,4 @@
 AUX mirrorbrain.conf.dist 283 RMD160 75e1d9b143df9d65b280ae6033d5421c03f64720 SHA1 fe724636efcfc6be74a583d159925ba99670d874 SHA256 f0128c5596b37b92b08b1ddde850f7aa68a29cccee7265bfa4d0beb2beb1c142
 DIST mirrorbrain-2.8.tar.gz 307722 RMD160 83fccfc8bff5a9c07d38407b44681135c3741bb9 SHA1 79470b1c46b6fb861001e7ff9c903f41948eb8e8 SHA256 204ea49097da5502443d7f8a5f34181667486de6c0be227da7e4524cba146125
-EBUILD mirrorbrain-2.8.ebuild 2040 RMD160 849832be275d6ce4c52a5a9954cd6e208a2f412f SHA1 557fd10efe37308dec8bdc14c3f5417f0bd20ec8 SHA256 c79c169f579ee5de872d46f01cfbb8b9d8d482c51f890583eec5b7268d9a8991
-MISC ChangeLog 199 RMD160 ec9025d8c6fa99a9b820fcdf6e8e3a75aa004754 SHA1 c031fcb03de0a70f8034a39525a3de780407f220 SHA256 ae4c62e79bbb62130f709f8ce255e901e372f2f6d3a22ba888f7f13a830275d6
+EBUILD mirrorbrain-2.8.ebuild 1666 RMD160 7eb8b45f6bb8aa6fcceea51a171cb51b34118f76 SHA1 fbe58c7ae80b7997e82bd8b81e284b59a33bc517 SHA256 ab68815f9710cadab95d9e609067ace4389af7332018a7cd91b480d50ee74ab6
+MISC ChangeLog 379 RMD160 57358a0cec8a72f1f9526597457c36be5a8b629b SHA1 9bdb4826ace9667e10755b2365d39ac02f830083 SHA256 8b1c936222ac6056e54022aeb813954cc9fcc5bb5f265b853ef512b43d4b0771
