@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 May 2009; Lance Albertson <ramereth@gentoo.org> mirrorbrain-2.8.ebuild:
+  Several fixes
+
+  * Made versions stricter for mirrorbrain
+
+  * All tools, sql are now in /usr/share
+
   15 May 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
   New ebuild
 
